feat: Add LLM generation flag and optimized query to Intent
This commit introduces a `requiresGeneration` flag and an `optimizedQuery` field to the Intent DTO.
It also updates the `EnrichedPromptBuilder` to include these fields in the LLM prompt, and modifies the `RAGOrchestrator` to route requests appropriately based on the `requiresGeneration` flag.
The `RAGService` is updated to use the `optimizedQuery` for embeddings when provided.
Unit and integration tests are updated to reflect these changes.

Co-authored-by: engmahmoudalgamal <engmahmoudalgamal@gmail.com>